# payment-provider

./: .dockerignore  .env-example  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: d40aee312036_initial.py
app/: __init__.py  config.py  database.py  dependencies.py  main.py  models.py  schemas.py
app/adapters/: __init__.py  providerA_adapter.py  providerB_adapter.py  provider_a.py  provider_b.py
app/api/: __init__.py  router.py
app/domain/: enums.py  exceptions.py  repository_port.py
app/helpers/: dependencies.py  enums.py  exceptions.py
app/infrastructure/: __init__.py  database.py
app/interface/: __init__.py  provider_interface.py  repository_interface.py
app/repositories/: payment_repository.py
app/services/: __init__.py  payment_service.py  provider_factory.py  provider_registry.py
